tests/examples/struct.out
version bump: 1.0.0 -> (Breaking) -> 2.0.0
warning: Breaking changes in `Def`
  --> $REPO_PATH/tests/examples/struct.rs:32:5
   |
32 | /     pub struct Def<A=u8> {
33 | |         field: A,
34 | |     }
   | |_____^
   |
   = note: NonBreaking (TypeParameterAdded { defaulted: true })
   = warning: Breaking (TypeChanged { error: Sorts(ExpectedFound { expected: u8, found: A }) })

warning: Breaking changes in `Efg`
  --> $REPO_PATH/tests/examples/struct.rs:36:5
   |
36 | /     pub struct Efg {
37 | |         pub field: u16,
38 | |     }
   | |_____^
   |
   = warning: Breaking (TypeChanged { error: Sorts(ExpectedFound { expected: u8, found: u16 }) })

warning: TechnicallyBreaking changes in `Fgh`
  --> $REPO_PATH/tests/examples/struct.rs:40:5
   |
40 | /     pub struct Fgh {
41 | |         pub field: u8,
42 | |     }
   | |_____^
   |
note: TechnicallyBreaking (ItemMadePublic)
  --> $REPO_PATH/tests/examples/struct.rs:16:9
   |
16 |         field: u8,
   |         ^^^^^^^^^

warning: Breaking changes in `Ghi`
  --> $REPO_PATH/tests/examples/struct.rs:44:5
   |
44 | /     pub struct Ghi {
45 | |         field: u8,
46 | |     }
   | |_____^
   |
warning: Breaking (ItemMadePrivate)
  --> $REPO_PATH/tests/examples/struct.rs:20:9
   |
20 |         pub field: u8,
   |         ^^^^^^^^^^^^^

warning: Breaking changes in `Hij`
  --> $REPO_PATH/tests/examples/struct.rs:48:5
   |
48 | /     pub struct Hij {
49 | |         field: u8,
50 | |     }
   | |_____^
   |
warning: Breaking (VariantStyleChanged { now_struct: true, total_private: true })
  --> $REPO_PATH/tests/examples/struct.rs:23:5
   |
23 |     pub struct Hij(u8);
   |     ^^^^^^^^^^^^^^^^^^^

